--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"husky": "^9.0.6",
 		"prettier": "^3.2.4",
+		"rollup": "^4.9.6",
 		"typescript": "^5.3.3"
 	}
 }
