--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .ts,.js,.jsx,.tsx --fix --quiet ./packages",
+		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/react.config.js",
 		"prepare": "husky"
 	},
 	"keywords": [],
@@ -13,6 +14,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^18.6.0",
 		"@commitlint/config-conventional": "^18.6.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
 		"commitlint": "^18.6.0",
@@ -21,7 +23,10 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"husky": "^9.0.6",
 		"prettier": "^3.2.4",
+		"rimraf": "^5.0.5",
 		"rollup": "^4.9.6",
+		"rollup-plugin-generate-package-json": "^3.2.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.3.3"
 	}
 }
